--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Ndrangheta-bot",
   "description": "Test",
   "version": "1.0.0",
-  "main": "index.js"
+  "main": "index.js",
   "scripts": {
     "start": "node bot.js"
   },
